--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@vercel/analytics": "^1.5.0",
     "googleapis": "^152.0.0",
     "next": "15.3.5",
     "react": "^19.0.0",
